--- a/metaFinal/src/view/adminPanel/home.fxml
+++ b/metaFinal/src/view/adminPanel/home.fxml
@@ -1,11 +1,128 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.HomeController">
-    
+<VBox prefHeight="456.0" prefWidth="1156.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.HomeController">
+  <children>
+      <Pane prefHeight="198.0" prefWidth="252.0" style="-fx-background-color: lightgray; -fx-background-radius: 30;" />
+      <VBox prefHeight="400.0" prefWidth="640.0">
+        <children>
+       
+<AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="678.0" prefWidth="1449.0" xmlns="http://javafx.com/javafx/8.0.171">
+    <children>
+        <Pane layoutX="302.0" layoutY="89.0" prefHeight="198.0" prefWidth="252.0" style="-fx-background-color: lightblue; -fx-background-radius: 30;">
+                     <children>
+                        <Text layoutX="26.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre d'utilisateurs">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Text>
+                        <Label fx:id="nbu" layoutX="65.0" layoutY="71.0" prefHeight="72.0" prefWidth="123.0">
+                           <font>
+                              <Font name="High Tower Text" size="41.0" />
+                           </font>
+                        </Label>
+                     </children></Pane>
+                  <Label layoutY="-5.0" prefHeight="683.0" prefWidth="269.0" style="-fx-background-color: #628EA4;" textFill="#ffc300">
+                     <font>
+                        <Font name="Arial Bold" size="25.0" />
+                     </font>
+                  </Label>
+           <Button fx:id="buser" layoutX="-1.0" layoutY="119.0" mnemonicParsing="false" onAction="#toUser" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Gestion des utlisateurs" />
+                  <Button layoutX="-1.0" layoutY="151.0" mnemonicParsing="false" onAction="#toVoy" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Gestion des voyages" />                                     
+                  <Button layoutX="-1.0" layoutY="183.0" mnemonicParsing="false" onAction="#toVoyORG" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Gestion des voyages organisés" />
+                  <Button layoutX="-1.0" layoutY="215.0" mnemonicParsing="false" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Gestion des voyages virtuels" />
+                  <Button layoutX="-1.0" layoutY="247.0" mnemonicParsing="false" onAction="#toReserVoy" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Réservations voyages" />
+                  <Button layoutX="-1.0" layoutY="280.0" mnemonicParsing="false" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Gestion des hôtels" />
+                  <Button layoutX="-1.0" layoutY="312.0" mnemonicParsing="false" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Gestion des chambres" />
+                  <Button layoutX="-1.0" layoutY="345.0" mnemonicParsing="false" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Réservations hôtels" />
+                  <Button layoutX="-1.0" layoutY="378.0" mnemonicParsing="false" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Gestion des évenements" />
+                  <Button layoutX="-1.0" layoutY="410.0" mnemonicParsing="false" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Réservation évenements" />
+                  <Button layoutX="-1.0" layoutY="442.0" mnemonicParsing="false" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Gestion des voitures" />
+                  <Button layoutX="-1.0" layoutY="474.0" mnemonicParsing="false" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Réservations voitures" />
+                  <Button layoutX="-1.0" layoutY="580.0" mnemonicParsing="false" onAction="#settings" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Paramétre compte" />
+                  <Button layoutX="-1.0" layoutY="613.0" mnemonicParsing="false" onAction="#logout" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Déconnexion" />
+                  <ImageView fitHeight="103.0" fitWidth="141.0" layoutX="-9.0" layoutY="-4.0">
+                     <image>
+                        <Image url="@../img/logo_meta.png" />
+                     </image>
+                  </ImageView>
+                  <Button layoutX="-1.0" layoutY="89.0" mnemonicParsing="false" onAction="#home" opacity="0.82" prefHeight="32.0" prefWidth="269.0" style="-fx-border-color: #91D4E5; -fx-background-color: #CDE2E6;" text="Acceuil" />
+          <Label layoutX="578.0" layoutY="18.0" prefHeight="10.0" prefWidth="337.0" text="ADMIN DASHBOARD" textFill="#ffc300">
+              <font>
+                  <Font name="Arial Bold" size="25.0" />
+              </font>
+          
+                </Label>
+                  <Pane layoutX="310.0" layoutY="459.0" prefHeight="198.0" prefWidth="252.0" style="-fx-background-color: lightblue; -fx-background-radius: 30;">
+                     <children>
+                        <Label fx:id="nbe" layoutX="65.0" layoutY="74.0" prefHeight="72.0" prefWidth="123.0">
+                           <font>
+                              <Font name="High Tower Text" size="41.0" />
+                           </font>
+                        </Label>
+                        <Text layoutX="19.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre d'évènements">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Text>
+                     </children></Pane>
+                  <Pane layoutX="569.0" layoutY="276.0" prefHeight="198.0" prefWidth="252.0" style="-fx-background-color: lightgray; -fx-background-radius: 30;">
+                     <children>
+                        <Text layoutX="36.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre d'hôtels">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Text>
+                        <Label fx:id="nbh" layoutX="54.0" layoutY="78.0" prefHeight="72.0" prefWidth="123.0">
+                           <font>
+                              <Font name="High Tower Text" size="41.0" />
+                           </font>
+                        </Label>
+                     </children></Pane>
+                  <Pane layoutX="840.0" layoutY="459.0" prefHeight="198.0" prefWidth="252.0" style="-fx-background-color: lightblue; -fx-background-radius: 30;">
+                     <children>
+                        <Text layoutX="32.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre de voitures">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Text>
+                        <Label fx:id="nbvoit" layoutX="73.0" layoutY="75.0" prefHeight="72.0" prefWidth="123.0">
+                           <font>
+                              <Font name="High Tower Text" size="41.0" />
+                           </font>
+                        </Label>
+                     </children></Pane>
+                  <Pane layoutX="832.0" layoutY="89.0" prefHeight="198.0" prefWidth="269.0" style="-fx-background-color: lightblue; -fx-background-radius: 30;">
+                     <children>
+                        <Text fx:id="nbv" layoutX="14.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre de voyages dispo">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Text>
+                        <Label fx:id="nbv" layoutX="70.0" layoutY="80.0" prefHeight="72.0" prefWidth="123.0">
+                           <font>
+                              <Font name="High Tower Text" size="41.0" />
+                           </font>
+                        </Label>
+        
+                         
+                     </children>
+                  </Pane>
+        
+     
+    </children>
 </AnchorPane>
+            
+        </children>
+      </VBox>
+  </children>
+</VBox>
