--- a/metaFinal/src/view/hotel/HotelList.fxml
+++ b/metaFinal/src/view/hotel/HotelList.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane fx:id="left_main" prefHeight="571.0" prefWidth="1003.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.hotel.HotelListController">
    <children>
-      <TableView fx:id="tab_hotel" layoutX="467.0" layoutY="121.0" onMouseClicked="#tablehandleButtonAction" prefHeight="299.0" prefWidth="536.0">
+      <TableView fx:id="tab_hotel" layoutX="412.0" layoutY="174.0" onMouseClicked="#tablehandleButtonAction" prefHeight="299.0" prefWidth="536.0">
          <columns>
             <TableColumn fx:id="id_hotel_tab" prefWidth="112.0" text="Id hotel" />
             <TableColumn fx:id="nom_tab" prefWidth="92.0" text="Nom hotel" />
@@ -22,43 +22,55 @@
             <TableColumn fx:id="image_tab" prefWidth="75.0" text="Image " />
          </columns>
       </TableView>
-      <Label layoutX="40.0" layoutY="297.0" text="Adresse " textFill="#555555" />
-      <Label layoutX="14.0" layoutY="245.0" text="Nombre etoile " textFill="#555555" />
-      <Label layoutX="64.0" layoutY="198.0" text="Nom" textFill="#555555" />
-      <TextField fx:id="Nom_hotel" layoutX="131.0" layoutY="193.0" />
-      <TextField fx:id="Nb_etoiles" layoutX="131.0" layoutY="240.0" />
-      <TextField fx:id="Adresse" layoutX="131.0" layoutY="292.0" />
-      <Label layoutX="81.0" layoutY="143.0" styleClass="labelform" text="ID" />
-      <TextField fx:id="Idh" layoutX="131.0" layoutY="138.0" />
-      <Button fx:id="delete" layoutX="189.0" layoutY="501.0" mnemonicParsing="false" onAction="#DeleteHotel" prefHeight="33.0" prefWidth="71.0" text="Delete">
+      <Label layoutX="40.0" layoutY="297.0" text="Adresse " textFill="#555555">
+         <font>
+            <Font name="Cambria" size="15.0" />
+         </font></Label>
+      <Label layoutX="14.0" layoutY="245.0" text="Nombre etoile " textFill="#555555">
+         <font>
+            <Font name="Cambria" size="15.0" />
+         </font></Label>
+      <Label layoutX="64.0" layoutY="198.0" text="Nom" textFill="#555555">
+         <font>
+            <Font name="Cambria" size="15.0" />
+         </font></Label>
+      <TextField fx:id="Nom_hotel" layoutX="131.0" layoutY="193.0" styleClass="search-box" stylesheets="@../../values/style.css" />
+      <TextField fx:id="Nb_etoiles" layoutX="131.0" layoutY="240.0" styleClass="search-box" stylesheets="@../../values/style.css" />
+      <TextField fx:id="Adresse" layoutX="131.0" layoutY="292.0" styleClass="search-box" stylesheets="@../../values/style.css" />
+      <Button fx:id="delete" layoutX="189.0" layoutY="501.0" mnemonicParsing="false" onAction="#DeleteHotel" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Delete">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="bsave1" layoutX="304.0" layoutY="501.0" mnemonicParsing="false" onAction="#EditHotel" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Edit">
+      <Button fx:id="bsave1" layoutX="297.0" layoutY="501.0" mnemonicParsing="false" onAction="#EditHotel" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Edit">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="bsave11" layoutX="89.0" layoutY="501.0" mnemonicParsing="false" onAction="#SaveHotel" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Save">
+      <Button fx:id="bsave11" layoutX="89.0" layoutY="501.0" mnemonicParsing="false" onAction="#SaveHotel" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Save">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="insert_image" layoutX="35.0" layoutY="379.0" mnemonicParsing="false" onAction="#insert_image" text="Browse" />
+      <Button fx:id="insert_image" layoutX="35.0" layoutY="379.0" mnemonicParsing="false" onAction="#insert_image" prefHeight="33.0" prefWidth="78.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Browse" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#747a80" height="87.0" layoutX="-4.0" layoutY="-4.0" stroke="BLACK" strokeType="INSIDE" width="1026.0" />
-      <Label layoutX="324.0" layoutY="29.0" prefHeight="10.0" prefWidth="337.0" text="Gestion Hotel" textFill="#00d1ff">
+      <Label layoutX="318.0" layoutY="11.0" prefHeight="10.0" prefWidth="337.0" text="Gestion Hotel" textFill="#00d1ff">
          <font>
-            <Font name="Arial Bold" size="31.0" />
+            <Font name="Cambria Bold" size="48.0" />
          </font>
       </Label>
-      <ImageView fitHeight="107.0" fitWidth="112.0" layoutX="910.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
+      <Label layoutX="20.0" layoutY="345.0" text="choisir une image " textFill="#555555">
+         <font>
+            <Font name="Cambria Math" size="15.0" />
+         </font></Label>
+      <ImageView fx:id="image_view" fitHeight="135.0" fitWidth="187.0" layoutX="189.0" layoutY="345.0" pickOnBounds="true" preserveRatio="true" />
+          <Label fx:id="file_path" alignment="CENTER" layoutX="15.0" layoutY="429.0" prefHeight="23.0" prefWidth="199.0" />
+      <TextField fx:id="tfrecherche" layoutX="661.0" layoutY="106.0" prefHeight="42.0" prefWidth="220.0" promptText="Recherche" styleClass="search-box" stylesheets="@../../values/style.css" />
+      <Button layoutX="827.0" layoutY="487.0" mnemonicParsing="false" onAction="#Retour" prefHeight="31.0" prefWidth="88.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Retour" />
+      <ImageView fitHeight="93.0" fitWidth="117.0" layoutX="904.0" layoutY="-6.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../Desktop/nayrouz/metaFinal/build/classes/view/img/logo_meta.png" />
+            <Image url="@../../image/logo_meta.png" />
          </image>
       </ImageView>
-      <Label layoutX="20.0" layoutY="345.0" text="choisir une image " textFill="#555555" />
-      <ImageView fx:id="image_view" fitHeight="135.0" fitWidth="187.0" layoutX="260.0" layoutY="343.0" pickOnBounds="true" preserveRatio="true" />
-          <Label fx:id="file_path" alignment="CENTER" layoutX="15.0" layoutY="429.0" prefHeight="23.0" prefWidth="199.0" />
    </children>
 </AnchorPane>
