--- a/metaFinal/src/view/PartieClient/voyageORGClientPartie.fxml
+++ b/metaFinal/src/view/PartieClient/voyageORGClientPartie.fxml
@@ -122,7 +122,10 @@
                      <children>
                         <Pane prefHeight="84.0" prefWidth="96.0" HBox.hgrow="ALWAYS" />
                         <HBox alignment="CENTER" prefHeight="28.0" prefWidth="79.0" styleClass="shopping-online-card" stylesheets="@../values/style.css" />
-                        <Pane prefHeight="84.0" prefWidth="96.0" />
+                        <Pane prefHeight="84.0" prefWidth="96.0">
+                           <children>
+                              <Button fx:id="map" layoutX="41.0" layoutY="35.0" mnemonicParsing="false" onAction="#map" text="Map" />
+                           </children></Pane>
                      </children>
                      <VBox.margin>
                         <Insets left="20.0" right="20.0" top="10.0" />
