--- a/metaFinal/src/view/PartieClient/modifierCompte.fxml
+++ b/metaFinal/src/view/PartieClient/modifierCompte.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="left_main" prefHeight="683.0" prefWidth="1196.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.login_signup.SignupController">
+<AnchorPane fx:id="left_main" prefHeight="683.0" prefWidth="1196.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.PartieClient.ModifierCompteController">
    <children>
       <AnchorPane layoutX="10.0" layoutY="8.0" prefHeight="675.0" prefWidth="522.0" style="-fx-background-color: #073258;">
          <children>
